@@ -7,22 +7,22 @@ function C = concurrence(s, sys)
 
 %! W.K. Wootters, "Entanglement of Formation of an Arbitrary State of Two Qubits", PRL 80, 2245 (1998).
 %! R. Horodecki, P. Horodecki, M. Horodecki, K. Horodecki, "Quantum entanglement", arXiv:quant-ph/0702225 (2007).
-% Ville Bergholm 2006-2010
+% Ville Bergholm 2006-2012
 
 
 global qit;
 
-if (abs(normalization(s)-1) > qit.tol)
+if abs(trace(s) - 1) > qit.tol
   disp('Warning: State not properly normalized.')
 end
 
 dim = dims(s);
 
-if (nargin == 2)
+if nargin == 2
   % concurrence between a qubit and a larger system
 
-  if (length(sys) == 1 && dim(sys) == 2)
-    if (abs(purity(s)-1) < qit.tol)
+  if length(sys) == 1 && dim(sys) == 2
+    if abs(purity(s) - 1) < qit.tol
       % pure state
 
       n = length(dim);
@@ -37,7 +37,7 @@ if (nargin == 2)
 end
 
 
-if (length(dim) ~= 2 || any(dim ~= [2 2]))
+if length(dim) ~= 2 || any(dim ~= [2 2])
   % not a two-qubit state
   error('Not a two-qubit state.')
 end
@@ -46,7 +46,7 @@ end
 X = kron(qit.sy, qit.sy);
 
 p = s.data;
-if (size(p, 2) == 1)
+if size(p, 2) == 1
   % ket
   C = abs(p'*X*conj(p));
 
@@ -59,7 +59,7 @@ if (size(p, 2) == 1)
 else
   % state operator
 
-  if (abs(purity(s)-1) > qit.tol)
+  if abs(purity(s) - 1) > qit.tol
     l = real(sqrt(sort(real(eig(p * X * conj(p) * X)), 'descend')));
     C = max(0, l(1) -l(2) -l(3) -l(4));
   else
